--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,15 @@ environment:
   flutter: ">=2.0.0"
 
 dependencies:
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
+  freezed: ^2.4.6
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
