--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  flutter_bloc: ^8.1.3
+  http: ^1.2.0
   flutter:
     sdk: flutter
+  equatable: ^2.0.5
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -26,7 +29,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -57,3 +59,5 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/to/font-from-package
+
+  uses-material-design: true
