--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
+  package_info_plus: ^8.3.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
