--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.5
   version: ^3.0.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.7
