--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: A collection of common Flutter widgets, utilities, and extensions.
-version: 0.0.5
+version: 1.0.10
 homepage:
 
 environment:
@@ -13,6 +13,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
   http: ^1.2.0
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   equatable: ^2.0.5
