--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/junyoungkim/Library/Android/sdk
-flutter.sdk=/Users/junyoungkim/Desktop/junyoung/app/SDK/flutter
+sdk.dir=C:\\Users\\junyoung\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\junyoung\\junyoung\\utills\\langueage\\flutter
