--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: A collection of common Flutter widgets, utilities, and extensions.
-version: 1.0.10
+version: 1.0.11
 homepage:
 
 environment:
@@ -19,6 +19,9 @@ dependencies:
   equatable: ^2.0.5
   version: ^3.0.2
   url_launcher: ^6.3.1
+  qr_flutter: ^4.1.0
+  printing: ^5.11.1
+  pdf: ^3.10.7
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -65,3 +68,16 @@ flutter:
   # https://flutter.dev/to/font-from-package
 
   uses-material-design: true
+
+  assets:
+    - assets/fonts/
+
+  fonts:
+    - family: NotoSansKR
+      fonts:
+        - asset: assets/fonts/NotoSansKR-Regular.otf
+          weight: 400
+        - asset: assets/fonts/NotoSansKR-Medium.otf
+          weight: 500
+        - asset: assets/fonts/NotoSansKR-Bold.otf
+          weight: 700
