--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: A collection of common Flutter widgets, utilities, and extensions.
-version: 1.0.11
+version: 1.0.12
 homepage:
 
 environment:
@@ -22,6 +22,7 @@ dependencies:
   qr_flutter: ^4.1.0
   printing: ^5.11.1
   pdf: ^3.10.7
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   build_runner: ^2.4.7
