--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
   http: ^1.2.0
+  intl: ^0.20.2
   dio: ^5.4.1
   equatable: ^2.0.5
   version: ^3.0.2
