--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   qr_flutter: ^4.1.0
   printing: ^5.11.1
   pdf: ^3.10.7
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   build_runner: ^2.4.7
