--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   pdf: ^3.10.7
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.2
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   build_runner: ^2.4.7
