--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http: ^1.2.0
   intl: ^0.20.2
   dio: ^5.4.1
+  flutter_markdown: ^0.7.7
   equatable: ^2.0.5
   version: ^3.0.2
   url_launcher: ^6.3.1
