--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.2
   google_mobile_ads: ^6.0.0
+  mcp_llm: ^1.0.0
+  mcp_client: ^1.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -42,7 +45,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   # To add assets to your package, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
