--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
   http: ^1.2.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   dio: ^5.4.1
   flutter_markdown: ^0.7.7
   equatable: ^2.0.5
@@ -31,6 +31,7 @@ dependencies:
   mcp_client: ^1.0.0
   flutter_dotenv: ^5.2.1
   uuid: ^4.3.3
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -48,6 +49,7 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - .env
+    - assets/translations/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
