--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   uuid: ^4.3.3
   easy_localization: ^3.0.7+1
+  permission_handler: ^12.0.1
+  contacts_service: ^0.6.3
 
 dev_dependencies:
   build_runner: ^2.4.7
