--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   uuid: ^4.3.3
   easy_localization: ^3.0.7+1
   permission_handler: ^12.0.1
-  contacts_service: ^0.6.3
+  flutter_contacts: ^1.1.9+2
 
 dev_dependencies:
   build_runner: ^2.4.7
