--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   easy_localization: ^3.0.7+1
   permission_handler: ^12.0.1
   infinite_scroll_pagination: ^5.1.0
+  share_plus: ^10.0.2
 
 dev_dependencies:
   build_runner: ^2.4.7
