--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_common
 description: A collection of common Flutter widgets, utilities, and extensions.
-version: 1.0.74
+version: 1.0.75
 homepage:
 
 environment:
@@ -35,6 +35,8 @@ dependencies:
   permission_handler: ^12.0.1
   infinite_scroll_pagination: ^5.1.0
   share_plus: ^10.0.2
+  mime: ^2.0.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -44,7 +46,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   mockito: ^5.4.4
-  http_parser: ^4.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
