--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   share_plus: ^10.0.2
   mime: ^2.0.0
   http_parser: ^4.1.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   build_runner: ^2.4.7
